# QuaternionICP

./: .clang-format  .gitattributes  .gitignore  BackendFactory_8cpp_source.html  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CeresCapabilities_8h_source.html  CommonOptions_8cpp_source.html  CommonOptions_8h_source.html  Correspondences_8h_source.html  EigenTypes_8h.html  EigenTypes_8h.js  EigenTypes_8h_source.html  EigenUtils_8h.html  EigenUtils_8h.js  EigenUtils_8h_source.html  EmbreeBackend_8h_source.html  GridFactory_8cpp_source.html  GridFactory_8h_source.html  GridLoader_8cpp_source.html  GridLoader_8h_source.html  GridSearchBackend_8h_source.html  Grid_8cpp_source.html  Grid_8h_source.html  ICPCeresSolver_8h.html  ICPCeresSolver_8h.js  ICPCeresSolver_8h_source.html  ICPCeresTwoPose_8h_source.html  ICPHelpers_8h.html  ICPHelpers_8h.js  ICPHelpers_8h_source.html  ICPLM_8h_source.html  ICPParams_8h.html  ICPParams_8h.js  ICPParams_8h_source.html  ICPSolverLeft_8h.html  ICPSolverLeft_8h.js  ICPSolverLeft_8h_source.html  ICPSolver_8h.html  (+132 more)
.github/actions/build-test-linux/: action.yml
.github/workflows/: build-and-test-linux.yml
Doc/: AmbientVersusTangent.md  EffectiveConditioning.md  Eps.md  EpsilonSweep.md  EpsilonSweepGuide.md  ExpectedEpsilon.md  FiniteDifferenceValidation.md  JacobianPedantic.md  JacobianValidation.md  RayProjectionJacobian.md  RayProjectionOverview.md  SE3_FullChartJacobian.md  SO3LeftJacobian.md  SimplifiedError.md  SimplifiedJacobianAnalysis.md  SimplifiedValidation.md
ExternalData/: mesh0000.exr  mesh0001.exr  mesh0002.exr  mesh0003.exr  mesh0004.exr  mesh0005.exr  mesh0006.exr  mesh0007.exr  mesh0008.exr  mesh0009.exr  mesh0010.exr  mesh0011.exr  mesh0012.exr  mesh0013.exr  mesh0014.exr  mesh0015.exr  mesh0016.exr  mesh0017.exr  mesh0023.exr  mesh0024.exr  mesh0025.exr  mesh0026.exr  mesh0027.exr  mesh0028.exr  mesh0029.exr  mesh0030.exr  mesh0031.exr  mesh0032.exr  mesh0033.exr  mesh0034.exr  mesh0035.exr  mesh0036.exr  mesh0037.exr  mesh0038.exr  mesh0039.exr  mesh0040.exr  mesh0041.exr  mesh0042.exr  mesh0043.exr  mesh0044.exr  (+55 more)
ICP/: BackendFactory.cpp  CMakeLists.txt  CeresCapabilities.h  CommonOptions.cpp  CommonOptions.h  Config.h.in  Correspondences.h  EigenTypes.h  EigenUtils.h  EmbreeBackend.h  Grid.cpp  Grid.h  GridFactory.cpp  GridFactory.h  GridLoader.cpp  GridLoader.h  GridSearchBackend.h  ICPCeres.h  ICPCeresSolver.h  ICPCeresTwoPose.h  ICPHelpers.h  ICPLM.h  ICPParams.h  ICPSimple.h  ICPSolver.h  ICPSolverLeft.h  IntersectionBackend.h  JacobiansAmbient.h  JacobiansAmbientTwoPose.h  JacobiansTangent.h  MultiViewICP.cpp  MultiViewICP.h  SE3.h  SE3CeresManifold.h  TestGridUtils.h  TriangulationMarks.h
ICPTest/: AllBackendsTest.cpp  BackendComparisonTest.cpp  CMakeLists.txt  CorrespondencesTest.cpp  EmbreeTest.cpp  ICPCeresTest.cpp  ICPCeresTwoPoseTest.cpp  ICPLevenbergMarquardtTest.cpp  ICPSimpleLeftTest.cpp  ICPSimpleTest.cpp  JacobiansAmbientTest.cpp  JacobiansAmbientTwoPoseTest.cpp  JacobiansTangentTest.cpp  ParameterPropagationTest.cpp  SE3Test.cpp  TestCorrespondences.cpp  TestSE3.cpp  TestUtils.h
MultiICP/: CMakeLists.txt  main.cpp
NativeDeps/: CMakeLists.txt  tinyexrConfig.cmake.in
NativeDeps/patches/: ceres-cuda-arch.patch
NativeDepsTest/: CMakeLists.txt  CMakePresets.json  build_tests.sh  ceres_test.cpp  eigen_test.cpp
Python/: RayProjection6D.py  RayProjection7D.py  RayProjection7DConsistent.py  decode_triangulation.py  exr_loader.py  icp_utils.py  jacobians_ambient.py  jacobians_tangent.py  se3_utils.py  test_ambient_jacobian.py  test_exr_loader.py  test_grids.py  test_inner_one_pose.py  test_outer_one_pose.py  test_se3_utils.py  test_two_pose_consistent.py  test_two_pose_jacobians.py  visualize_exr.py  visualize_exr_alignment.py  visualize_exr_lightweight.py
SingleICP/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  (+90 more)
tools/: iwyu.imp  run-iwyu.sh
