macro(add_icp_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE ICP Catch2::Catch2WithMain)
    catch_discover_tests(${name})
endmacro()

add_icp_test(CorrespondencesTest)
add_icp_test(SE3Test)
add_icp_test(JacobiansAmbientTest)
add_icp_test(JacobiansAmbientTwoPoseTest)
add_icp_test(ICPSimpleTest)
add_icp_test(ICPCeresTest)
add_icp_test(ICPCeresTwoPoseTest)
add_icp_test(ICPLevenbergMarquardtTest)
